Adicionei um paragrafo

--- a/Site-Exemplo/Index.html
+++ b/Site-Exemplo/Index.html
@@ -9,7 +9,8 @@
     <h1>Olá, Mundo</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure assumenda fugit nulla repellat unde porro natus suscipit aspernatur, doloremque quas autem inventore voluptatibus ex ipsa veritatis sed corrupti ratione et.</p>
-   
+    <hr>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eos nisi iste dolores. Nemo amet magni obcaecati hic, fugiat enim voluptatibus facere assumenda, non quos perferendis accusamus sed repellendus! Eaque, obcaecati!</p>
     
 </body>
 </html>
